--- a/views/comments.hbs
+++ b/views/comments.hbs
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Comments</title>
     <link rel="stylesheet" href="/style.css">
+    <div class="edit-btn-wrapper">
+    <button class="edit-btn">Edit</button>
+</div>
+
 </head>
 <body>
     <header>
