--- a/views/comments.hbs
+++ b/views/comments.hbs
@@ -71,6 +71,19 @@
             </div>
         </section>
     </main>
+    
+<div class="rating">
+  <button><span class="star">☆</span></button>
+  <button><span class="star">☆</span></button>
+  <button><span class="star">☆</span></button>
+  <button><span class="star">☆</span></button>
+  <button><span class="star">☆</span></button>
+</div>
+
+<p id="average-rating">Average Rating: 0 / 5</p>
+
+<script src="/rating.js"></script>
+
 
     <footer>
         <p>© 2024 Community Comments</p>
