--- a/views/index.hbs
+++ b/views/index.hbs
@@ -55,10 +55,10 @@
                     <strong>{{this.name}}</strong>: <span id="message-{{this.id}}">{{this.message}}</span>
 
                     <!-- Edit & Delete Buttons -->
-                    <button class="edit-btn" onclick="showEditForm('{{this.id}}')">Edit</button>
+                    <button class="btn edit-button" onclick="showEditForm('{{this.id}}')">Edit</button>
                     <form action="/delete" method="POST" style="display:inline;">
                         <input type="hidden" name="entryId" value="{{this.id}}">
-                        <button type="submit" class="delete-btn">Delete</button>
+                        <button type="submit" class="btn delete-button">Delete</button>
                     </form>
 
                     <!-- Edit Form -->
